force-app/main/default/objects/ContactChanged__e/ContactChanged__e.object-meta.xml
<CustomObject>
    <label>ContactChanged</label>
    <pluralLabel>ContactsChanged</pluralLabel>
</CustomObject>