force-app/main/default/objects/ContactChanged__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>The Salesforce Account ID (18-character) this contact belongs to. Used for relationship mapping in external systems.</description>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>