force-app/main/default/objects/ContactChanged__e/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>Unique identifier from external ERP system for customer master data synchronization.</description>
    <label>ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>