force-app/main/default/objects/ContactChanged__e/fields/ERPSystem__c.field-meta.xml
<CustomField>
    <fullName>ERPSystem__c</fullName>
    <label>ERP System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>