force-app/main/default/objects/ContactChanged__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Contact&apos;s legal first name as in official documents. Required for personalized communications.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>