force-app/main/default/objects/ContactChanged__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>System-generated 18-character Salesforce Contact ID. Used for external system integrations.</description>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>