force-app/main/default/objects/ContactChanged__e/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Contact&apos;s legal last name/surname. Combined with FirstName for complete identification.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>