force-app/main/default/objects/ContactChanged__e/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <description>Complete mailing address in single-line format (street, city, postal code). Used for correspondence.</description>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>