force-app/main/default/objects/ContactChanged__e/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>Mailing City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>