force-app/main/default/objects/ContactChanged__e/fields/MailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryCode__c</fullName>
    <label>Mailing Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>