force-app/main/default/objects/ContactChanged__e/fields/MailingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingHouseNumber__c</fullName>
    <label>Mailing House Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>