force-app/main/default/objects/ContactChanged__e/fields/MailingPostal__c.field-meta.xml
<CustomField>
    <fullName>MailingPostal__c</fullName>
    <label>Mailing Postal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>