force-app/main/default/objects/ContactChanged__e/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>Mailing State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>