force-app/main/default/objects/ContactChanged__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Auto-generated full name combining Salutation, FirstName and LastName (e.g., &quot;Mr. John Smith&quot;).</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>