force-app/main/default/objects/ContactChanged__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>The Salesforce User or Queue ID (18-character) responsible for this contact record.</description>
    <label>OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>