force-app/main/default/objects/ContactChanged__e/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Formal title for communications (e.g., &quot;Mr.&quot;, &quot;Ms.&quot;, &quot;Dr.&quot;). Determines greeting style.</description>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>